2010-01-14  Gustavo Noronha Silva  <gns@gnome.org>

        Skip new test that requires new functionality in
        DRT (layoutTestController.setWillSendRequestReturnsNull).

        * platform/gtk/Skipped:

2010-01-14  Gustavo Noronha Silva  <gns@gnome.org>

        Skipping test that fails intermitently - fix for the test being
        worked on; see https://bugs.webkit.org/show_bug.cgi?id=33671.

        * platform/gtk/Skipped:

2010-01-13  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        LayoutTests/animations/play-state.html and LayoutTests/animations/3d/transform-origin-vs-functions.html are flaky
        https://bugs.webkit.org/show_bug.cgi?id=33626

        Speculative fixes.

        * animations/3d/transform-origin-vs-functions.html:
        Remove timeout for notifyDone and start measurement at
        webkitAnimationStart instead of body onload.
        * animations/play-state-expected.txt:
        * animations/play-state.html:
        Reduce test time in half, but keep the same tolerance level.

2010-01-13  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        A few more flaky transitions/animations tests
        https://bugs.webkit.org/show_bug.cgi?id=33642

        Attempt to deflake a few more tests. Some of these are second
        attempts. The first attempt made it less flaky, but not 100%.
        Also, for a couple tests, make them shorter. They seemed
        unnecessarily long.

        * animations/change-one-anim-expected.txt:
        * animations/change-one-anim.html:
        * transitions/cancel-transition.html:
        * transitions/mask-transitions.html:
        * transitions/shorthand-border-transitions-expected.txt:
        * transitions/shorthand-border-transitions.html:

2010-01-14  Beth Dakin  <bdakin@apple.com>

        Reviewed by Sam Weinig.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=33498 REGRESSION: 